# text-viewver

./: com.example.TextViewer.json  meson.build
data/: com.example.TextViewer.desktop.in  com.example.TextViewer.gschema.xml
po/: POTFILES  meson.build
src/: main.c  meson.build  text_viewer1-application.c  text_viewer1-application.h  text_viewer1-window.c  text_viewer1-window.h  text_viewer1-window.ui  text_viewer1.gresource.xml
src/gtk/: help-overlay.ui
